--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,24 @@
+/*
+Colorscheme:
+#dbf6e9
+#94ebcd
+#6ddccf
+#282C34
+ */
 body {
   font-family: 14px 'Roboto', Helvetica, Arial, sans-serif;
-
+  height: 100%;
+  position: relative;
 }
 
 .main {
+  /* position: relative; */
   background-color: #282C34;
-  width:100%;
+  width: 100%;
   padding: 0;
-  margin:0;
+  margin: 0;
   padding-bottom: 10vh
 }
-
 
 .other {
   background-color: #dbf6e9;
@@ -41,19 +49,20 @@ h3 {
   font-weight: 400;
 }
 
+.carousel-item img {
+  height: 30rem;
+  object-fit: contain;
+}
+
 .container p {
   text-align: center;
   color: #dbf6e9;
 }
 
-
-
 .container a {
   color: #dbf6e9;
   text-align: center;
 }
-
-
 
 .center {
   display: block;
@@ -72,17 +81,28 @@ h3 {
   margin: 3rem;
 }
 
+.container3 {
+  background-color: #282C34;
+  position:relative;
+  padding-bottom: 9vh;
+
+}
+.hide{
+  display:none;
+}
+
+.container3:hover + .hide{
+  display:relative
+}
+
 .row {
   padding-top: 0.5vw;
 }
 
-
-
 .card {
   width: 18rem;
+  margin: 1rem 0;
 }
-
-
 
 #windmill {
   display: block;
@@ -92,9 +112,6 @@ h3 {
   margin-top: 15vh;
 }
 
-
-
-
 .rotate {
   animation: rotation 30s infinite linear;
 }
@@ -103,7 +120,27 @@ h3 {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(359deg);
   }
+}
+
+.footer-padding {
+  padding-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 9vh;
+  background-color: #94ebcd;
+}
+
+.footer p {
+  padding-top: 3vh;
+  font-size: 12px;
+  color: #fff;
 }
