Added barebones for uploading images with mongodb and multer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         <div class="card-body">
           <h5 class="card-title">Want to contribute?</h5>
           <p class="card-text">The family accepts any good photos of Matthew to remember him by</p>
-          <a href="/wip/upload" class="card-link center">Click here to upload</a>
+          <a href="/upload" class="card-link center">Click here to upload</a>
         </div>
       </div>
     </div>
