Start adding album page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@
           <figcaption>
             <h2>Check out Matthew's Gallery</h2>
           </figcaption>
-          <a href="/wip/gallery"></a>
+          <a href="/album"></a>
         </figure>
       </div>
       <div class="carousel-item">
@@ -101,7 +101,7 @@
           <figcaption>
             <h2>Check out Matthew's Gallery</h2>
           </figcaption>
-          <a href="/wip/gallery"></a>
+          <a href="/album"></a>
         </figure>
       </div>
       <div class="carousel-item">
@@ -110,7 +110,7 @@
           <figcaption>
             <h2>Check out Matthew's Gallery</h2>
           </figcaption>
-          <a href="/wip/gallery"></a>
+          <a href="/album"></a>
         </figure>
       </div>
     </div>
