tweaks and additions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,10 +13,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-4 col-sm-4 col-md-3">
-          40 Days Mass
+          100 Days Mass
         </div>
         <div class="col-4 col-sm-4 col-md-3">
-          17 April 2021
+          16 June 2021
         </div>
       </div>
       <div class="row justify-content-center">
@@ -25,6 +25,14 @@
         </div>
         <div class="col-4 col-sm-4 col-md-3">
           9 February 2022
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-4 col-sm-4 col-md-3">
+          Two-Year Mass
+        </div>
+        <div class="col-4 col-sm-4 col-md-3">
+          9 February 2023
         </div>
       </div>
       <div class="row justify-content-center">
