--- a/views/uploadImage.ejs
+++ b/views/uploadImage.ejs
@@ -1,61 +1,68 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Uploading</title>
-</head>
+<%- include("partials/header-album") -%>
 
 <body>
-    <h1>To Upload Image on mongoDB</h1>
-    <hr>
-    <div>
-        <form action="/upload" method="POST" enctype="multipart/form-data">
-            <div>
-                <label for="name">Image Title</label>
-                <input type="text" id="name" placeholder="Name"
-                       value="" name="name" required>
-            </div>
-            <div>
-                <label for="desc">Image Description</label>
-                <textarea id="desc" name="pesc" value="" rows="2"
-                          placeholder="Description" required>
-                </textarea>
-            </div>
-            <div>
-                <label for="image">Upload Image</label>
-                <input type="file" id="image"
-                       name="image" value="" required>
-            </div>
-            <div>
-                <button type="submit">Submit</button>
-            </div>
-        </form>
-    </div>
+  <div class="header">
+    <h1>Add single photos to the album</h1>
+  </div>
+  <div class="inputSection">
+      <form action="/upload" method="POST" enctype="multipart/form-data">
+        <div class="col" style="width:">
 
-    <hr>
+          <div class="">
+            <label for="name">Image Title</label>
+            <input type="text" class="form-control" id="name" placeholder="Name"
+                   value="" name="name" required>
+          </div>
+          <div class="">
+            <label for="desc">Image Description</label>
+            <textarea id="desc" class="form-control" name="pesc" value="" rows="2"
+                      placeholder="Description" style="color:#000" required>
+            </textarea>
+          </div>
 
-    <h1>Uploaded Images Pending for Admin Approval</h1>
-    <div>
-        <% items.forEach(function(image) { %>
-        <div>
-            <div>
-                <img src="data:image/<%=image.img.contentType%>;base64,
-                     <%=image.img.data.toString('base64')%>">
-                <div>
-                    <h5><%= image.name %></h5>
-                    <p><%= image.desc %></p>
-                    <!-- <p><%= image.isImage %></p>
-                    <p><%= image.verified %></p>
-                    <p><%= image.row %></p>
-                    <p><%= image.col %></p> -->
-                </div>
-            </div>
+          <!-- <div class="row" style="background-color: #fff"> -->
+            <label for="image">Upload Image</label>
+          <!-- </div> -->
+          <!-- <div class="row" style="background-color: #fff"> -->
+            <input type="file" id="image"
+                 name="image" value="" required>
+          <!-- </div> -->
         </div>
-        <% }) %>
-    </div>
+  </div>
+          <div>
+              <button type="submit" style="margin-bottom: 50px" class="btn btn-default">Submit</button>
+          </div>
+        </div>
+      </form>
+  </div>
+
+  <h2>Or upload images to google drive:</h2>
+  <a href="https://drive.google.com/drive/folders/1fHPzLVS0PhD6wq7jtIjjwnivwQfOvQE3?usp=sharing">Go to drive</a>
+
+  <hr>
+
+  <h2>Uploaded Images Pending for Admin Approval:</h2>
+  <div>
+    <% if (typeoff items === "undefined") {%>
+        <h2>No images are pending for approval</h2>
+      <%} else { console.log("works!");%>
+      <% items.forEach(function(image) { %>
+      <div>
+          <div>
+              <img src="data:image/<%=image.img.contentType%>;base64,
+                   <%=image.img.data.toString('base64')%>">
+              <div>
+                  <h5><%= image.name %></h5>
+                  <p><%= image.desc %></p>
+                  <!-- <p><%= image.isImage %></p>
+                  <p><%= image.verified %></p>
+                  <p><%= image.row %></p>
+                  <p><%= image.col %></p> -->
+              </div>
+          </div>
+      </div>
+      <% })} %>
+  </div>
 </body>
 
-</html>
+<%- include("partials/footer") -%>
