changes up to May 9,2021

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
           <h5 class="card-title">Have ideas?</h5>
           <p class="card-text">Let us know what ideas you have by leaving us a note!</p>
 
-          <a href="/wip/suggestion" class="card-link center">Suggest a feature</a>
+          <a href="/suggest" class="card-link center">Suggest a feature</a>
 
         </div>
       </div>
