--- a/views/suggestSuccess.ejs
+++ b/views/suggestSuccess.ejs
@@ -2,7 +2,7 @@
 
 <div class="main">
   <h1 style="height:20vh;padding:0"> Thank you! </h1>
-  <h2 style="height:30vh;padding:0">You are subscribed!</h2>
+  <h2 style="height:30vh;padding:0">We will look into your suggestion and possibly add it to the website</h2>
   <div style="text-align:center;height:38.7vh;font-size:3vw">
     <a href="/">Click here to go back</a>
   </div>
